# ML4GCS

./: .gitignore  .gitmodules  README.md  postBuild  pyproject.toml  requirements.txt
configs/: spe11b_download.json
doc/: fluidflower.md  spe11.md
notebooks/: SPE11B_task_1.ipynb  fluidflower_task.ipynb  spe11b_task_1.ipynb  start.ipynb
scripts/: download_spe11b.py  map_files.txt  map_files_dt50y.txt  metadata.pkl  process_map_files.py  test_data_access.ipynb
src/ml4gcs/: __init__.py  metrics.py
src/ml4gcs/data/: __init__.py  dataset.py  discovery.py  export.py  index.py  normalization.py  series.py  spatial_map.py  splits.py
src/ml4gcs/fluidflower_utils/: __init__.py  data.py
